--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Onde sua opinião é o que mais importa!"
     />
     <title>DSMovie</title>
   </head>
   <body>
-    <noscript>Você precisa habilitar o JavaScript para esta aplicação.</noscript>
+    <noscript>Você precisa habilitar o JavaScript ver esta página.</noscript>
     <div id="root"></div>
 
   </body>
